# olymp-results-parser

./: granit_nauki.ipynb  pyproject.toml  squirell.ipynb
